--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,16 +18,16 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
-    "@types/react": "^19.1.4",
+    "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.3.3",
     "vite": "^5.1.4"
   },
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
