--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.14.0",
+    "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
@@ -23,6 +25,7 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.3",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
