--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,10 @@
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:generate": "npm run typeorm migration:generate",
     "migration:run": "npm run typeorm migration:run",
-    "test": "jest"
+    "test": "jest",
+    "setup:categories": "ts-node src/scripts/createCategories.ts",
+    "setup:agencies": "ts-node src/scripts/createAgencies.ts",
+    "setup:all": "npm run setup:categories && npm run setup:agencies"
   },
   "dependencies": {
     "@types/multer": "^1.4.12",
