--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.15.10",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
