--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,11 @@
     "axios": "^1.6.7",
     "date-fns": "^4.1.0",
     "formik": "^2.4.5",
+    "i18next": "^25.1.3",
+    "i18next-browser-languagedetector": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.5.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "yup": "^1.3.3"
