--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build":  "tsc --project tsconfig.prod.json && vite build",
     "preview": "vite preview"
   },
   "eslintConfig": {
