--- a/backend/src/.env
+++ b/backend/src/.env
@@ -9,5 +9,5 @@ url=postgresql://asm_8k0j_user:NcJkdjdVdfRRJif31Z3rW8JcFKxWgufk@dpg-d0ipqk6uk2gs
 EMAIL_SERVICE=gmail
 EMAIL_USER=niyokwizerajd123@gmail.com
 EMAIL_PASSWORD="ptup lswr dccy xdat"
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://cesv1.netlify.app/
 NODE_ENV=development
