--- a/backend/src/.env
+++ b/backend/src/.env
@@ -11,3 +11,9 @@ EMAIL_USER=niyokwizerajd123@gmail.com
 EMAIL_PASSWORD="ptup lswr dccy xdat"
 FRONTEND_URL=https://cesv1.netlify.app/
 NODE_ENV=development
+
+
+//claudinary
+CLOUDINARY_CLOUD_NAME=dxufhhhbl
+CLOUDINARY_API_KEY=656287143733291
+CLOUDINARY_API_SECRET=5MUejExUbvXOvC41-PPSiHR_T1s
