--- a/backend/package.json
+++ b/backend/package.json
@@ -50,6 +50,7 @@
     "nodemon": "^2.0.22",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
   "keywords": [],
